Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68501

[REG 5.10->5.11] Mouse release event is lost when using QSizeGrip

XMLWordPrintable

      QSizeGrip starts system resize on mouse press:

      QPlatformWindow::startSystemResize()
      

      When system resize is activated after mouse press, mouse release event is not passed after mouse button release causing resize cursor still visible on mouse move over the window.

      Discovered after [1] https://codereview.qt-project.org/#/c/193415/

        1. QTBUG-68501.zip
          0.7 kB
          Błażej Szczygieł
        2. qtbug68501.zip
          4 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            zaps166 Błażej Szczygieł
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes